// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div>
  <div
    className="row"
  >
    <CounterButton
      ariaLabel="Decrement value"
      onClick={[Function]}
      variant="default"
    >
      -
    </CounterButton>
    <span
      className="value"
    >
      0
    </span>
    <CounterButton
      ariaLabel="Increment value"
      onClick={[Function]}
      variant="default"
    >
      +
    </CounterButton>
  </div>
  <div
    className="row"
  >
    <CounterTextbox
      ariaLabel="Set increment amount"
      onChange={[Function]}
      value="2"
    />
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add Amount
    </CounterButton>
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add If Odd
    </CounterButton>
    <CounterButton
      disabled={false}
      onClick={[Function]}
      variant="async"
    >
      Fetch
    </CounterButton>
    <CounterButton
      disabled={false}
      onClick={[Function]}
      variant="async"
    >
      Post
    </CounterButton>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<div>
  <div
    className="row"
  >
    <CounterButton
      ariaLabel="Decrement value"
      onClick={[Function]}
      variant="default"
    >
      -
    </CounterButton>
    <span
      className="value"
    >
      0
    </span>
    <CounterButton
      ariaLabel="Increment value"
      onClick={[Function]}
      variant="default"
    >
      +
    </CounterButton>
  </div>
  <div
    className="row"
  >
    <CounterTextbox
      ariaLabel="Set increment amount"
      onChange={[Function]}
      value="2"
    />
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add Amount
    </CounterButton>
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add If Odd
    </CounterButton>
    <CounterButton
      disabled={true}
      onClick={[Function]}
      variant="async"
    >
      Fetch
    </CounterButton>
    <CounterButton
      disabled={true}
      onClick={[Function]}
      variant="async"
    >
      Post
    </CounterButton>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests with error 1`] = `
<div>
  <div>
    error
  </div>
  <div
    className="row"
  >
    <CounterButton
      ariaLabel="Decrement value"
      onClick={[Function]}
      variant="default"
    >
      -
    </CounterButton>
    <span
      className="value"
    >
      0
    </span>
    <CounterButton
      ariaLabel="Increment value"
      onClick={[Function]}
      variant="default"
    >
      +
    </CounterButton>
  </div>
  <div
    className="row"
  >
    <CounterTextbox
      ariaLabel="Set increment amount"
      onChange={[Function]}
      value="2"
    />
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add Amount
    </CounterButton>
    <CounterButton
      onClick={[Function]}
      variant="default"
    >
      Add If Odd
    </CounterButton>
    <CounterButton
      disabled={false}
      onClick={[Function]}
      variant="async"
    >
      Fetch
    </CounterButton>
    <CounterButton
      disabled={false}
      onClick={[Function]}
      variant="async"
    >
      Post
    </CounterButton>
  </div>
</div>
`;
